--- a/styles/main.css
+++ b/styles/main.css
@@ -1,40 +1,44 @@
 .main{
- padding: 15px 0 0 0;
  border-right: 1px solid hsl(0, 0%, 95%);
 
  display: flex;
  flex-direction: column;
- justify-content: start;
+ justify-content: flex-start;
 }
 
-.home-header{
+.home-settings{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 2px 0 0;
   border-bottom: 1px solid hsl(0, 0%, 95%);
 
-  display: flex;
-  flex-direction: column;
-}
-
-h1{
-  margin: 0;
-  padding-left: 18px;
-
-  font-size: 1.15em;
+  position: relative;
 }
 
 .home-options{
-  margin-top: 30px;
-  padding-left: 18px;
-  padding-bottom: 18px;
-
   display: flex;
-  justify-content: space-around;
-
-  position: relative;
+  flex-direction: row;
+  align-items: center;
 
   color: hsl(0, 0%, 40%);
   font-weight: 600;
   font-size: 0.9em;
 }
+
+.foryou-tab-container,
+.following-tab-container{
+  padding: 17px 110px ;
+
+  cursor: pointer;
+}
+.foryou-tab-container:hover,
+.following-tab-container:hover{
+  background-color: hsl(0, 0%, 90%);
+}
+
 
 .foryou-tab{
   color: black;
@@ -45,41 +49,88 @@ h1{
 .blue-tab{
   position: absolute;
   bottom: 0;
-  left: 22%;
+  left: 18%;
 
-  width: 55px;
-  height: 4px;
+  width: 57px;
+  height: 3.7px;
 
   background-color: hsl(203, 100%, 48%);
-  opacity: 0.7;
 
   border-radius: 2px;
+}
+
+.fa-gear-container{
+  width: 35px;
+  height: 35px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+
+  cursor: pointer;
+}
+
+.fa-gear-container:hover{
+  background-color: hsl(0, 0%, 90%);
 }
 
 .whatshappening-container{
   display: flex;
   align-items: start;
 
-  padding: 10px 20px;
+  padding: 6px 20px 10px 16px;
   border-bottom: 1px solid hsl(0, 0%, 95%);
 }
 
-.profile-picture{
-  width: 35px;
+.profile-picture-container{
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
 
-  margin-right: 15px;
+.profile-picture-hover{
+  width: 40px;
+  height: 40px;
+
+  background-color: rgb(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: background-color 0.5s;
+  
+  border-radius: 50%;
+
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
+
+.profile-picture{
+  width: 40px;
+
+  border-radius: 50%;
+
+  cursor: pointer;
+}
+.profile-picture-container:hover .profile-picture-hover{
+  opacity: 1;
 }
 
 .whatshappening-text{
   flex: 1;
+  align-items: center;
+
+  margin-left: 15px;
 }
 
 .whatshappening-text p{
   font-size: 1.2em;
+  font-weight: 500;
 
   color: hsl(0, 0%, 45%);
 
-  margin-top: 12px;
+  margin-top: 16px;
 }
 
 .whatshappening-icons-btn{
@@ -87,17 +138,32 @@ h1{
   align-items: center;
   justify-content: space-between;
 
-  padding-top: 25px;
+  padding-top: 28px;
 }
 
 .whatshappening-icons{
   display: flex;
+  align-items: center;
+}
+
+.main-icon-container{
+  border-radius: 50%;
+
+  width: 35px;
+  height: 35px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-icon-container:hover{
+  background-color: hsl(207, 100%, 96%);
+
+  cursor: pointer;
 }
 
 .fa-icon{
   color: hsl(207, 100%, 60%);
-
-  margin-right: 20px;
 }
 
 .gif{
@@ -125,6 +191,8 @@ h1{
 
 .fa-location-dot{
   opacity: 0.5;
+
+  margin-left: 10px;
 }
 
 .post-btn{
@@ -138,13 +206,15 @@ h1{
 
   font-size: 0.93em;
   font-weight: 700;
-
-  cursor: pointer;
 }
 
 .numberof-unwatched{
   border-bottom: 1px solid hsl(0, 0%, 95%);
-  padding: 15px 0;
+  padding: 13px 0;
+}
+.numberof-unwatched:hover{
+  background-color: hsl(0, 0%, 97%);
+  cursor: pointer;
 }
 
 .numberof-unwatched p{
@@ -160,13 +230,20 @@ h1{
   display: flex;
   align-items: start;
 
-  padding-left: 18px;
-  margin-top: 3px;
+  padding: 5px 0 0 17px;
   border-bottom: 1px solid hsl(0, 0%, 95%);
+}
+.page:hover{
+  background-color: hsl(0, 0%, 97%);
+  cursor: pointer;
 }
 
 .hundeyin-page{
   border-bottom: none;
+}
+
+.page-profile-picture{
+  margin-top: -3px;
 }
 
 .page-profile-picture img,
@@ -180,7 +257,7 @@ h1{
 }
 
 .page-content{
-  padding: 0 7px 0 3px;
+  padding: 3px 7px 0 3px;
   flex: 1;
 }
 
@@ -196,6 +273,8 @@ h1{
 .name{
   display: flex;
   align-items: center;
+
+  margin-bottom: 5px;
 }
 
 .username{
@@ -203,6 +282,11 @@ h1{
   font-weight: 700;
 
   margin-right: 3px;
+}
+.username:hover,
+.post-time:hover{
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .tick{
@@ -218,8 +302,49 @@ h1{
   color: hsl(0, 0%, 40%);
 }
 
-.three-dot img{
-  width: 25px;
+.three-dot{
+  width: 35px;
+  height: 35px;
+
+  cursor: pointer;
+  font-size: 0.9em;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+}
+.three-dot:hover{
+  background-color: rgb(143, 205, 255, 0.2);
+  color: hsl(207, 100%, 46%);
+}
+
+.more-tooltip-container{
+  position: relative;
+}
+
+.more-tooltip{
+  font-size: 0.8em;
+
+  background-color: rgb(0, 0, 0, 0.6);
+  color: white;
+
+  padding: 3px 4px;
+  border-radius: 2px;
+
+  position: absolute;
+  bottom: -23px;
+  z-index: 1;
+
+  opacity: 0;
+  transition: display 5s;
+
+  pointer-events: none;
+}
+
+.more-tooltip-container:hover .more-tooltip{
+  opacity: 1;
 }
 
 .tweet{
@@ -362,10 +487,14 @@ h1{
 
 .stats-figure{
   font-size: 0.85em;
-  font-weight: 500;
   letter-spacing: 0.005em;
   
   color: hsl(0, 0%, 38%);
 
   margin-left: 8px;
+}
+
+.fa-bookmark-main{
+  color: hsl(0, 0%, 38%);
+  margin-right: 18px;
 }
