--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,43 +3,66 @@
   top: 0;
 
   overflow-y: auto;
-  overflow-x: hidden;
 
   height: 100vh;
-}
 
-.nav{
   display: flex;
   flex-direction: column;
   align-items: center;
   
-  padding: 0 15px 0 110px;
+  padding: 5px 21px 15px 120px;
   
-  width: 40px;  
+  width: 40px;
 }
 
-img{
-  margin: 10px 0;
+.navbar-img-box,
+.navbar-logo-box,
+.navbar-profile-pic-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 50px;
+  height: 50px;
+
+  margin: 0 5px 0 0;
+  border-radius: 50%;
+
+  cursor: pointer;
+  transition: width 0.2s, height 0.2s, background-color 0.2s;
 }
 
-.twitter-logo{
-  width: 45px;
-
-  margin-top: 15px;
+.navbar-img-box:hover,
+.navbar-logo-box:hover,
+.navbar-profile-pic-box:hover{
+  background-color: hsl(0, 0%, 90%);
 }
 
-.home-icon{
-  width: 35px;
+.navbar-logo-box{
+  padding: 10px 0;
+
+  margin-bottom: 5px;
 }
 
-.home-icon-container{
+.fa-logo-navbar{
+  font-size: 1.85em;
+}
+
+.fa-icon-navbar{
+  font-size: 1.4em;
+
+  margin: 15px 0;
+}
+
+.blue-dot-container{
   position: relative;
 }
 
 .blue-dot{
   position: absolute;
-  top: 10.5px;
-  right: 5px;
+  top: 10px;
+  right: 1px;
 
   width: 7.3px;
   height: 7px;
@@ -50,41 +73,118 @@ img{
   opacity: 0.8;
 }
 
-.search-icon{
-  width: 28px;
+.communities-container{
+  display: flex;
 }
 
-.notifications-icon{
-  width: 23px;
+.fa-user-left{
+  margin-right: -2px;
 }
 
-.messages-icon{
-  width: 30px;
-  height: 40px;
+.fa-user-right{
+  margin-left: -2px;
 }
 
-.lists-icon{
-  width: 30px;
-  height: 25px;
+.twitter-navbar-icon{
+  font-size: 1.6em;
 }
 
-.communities-icon,
-.twitter-logo-icon,
-.profile-pic-icon{
-  width: 40px;
+.more-container{
+  position: relative;
 }
 
-.user-icon{
-  width: 25px;
-}
+.fa-ellipsis-navbar{
+  position: absolute;
+  left: 5px;
+  top: 5px;
 
-.three-dots-icon{
-  width: 28px;
+  font-size: 0.9em;
 }
 
 .tweet-icon{
-  width: 110px;
+  width: 105px;
 
-  margin-top: -3px;
+  margin: 0 5px 0 0;
+
+  pointer-events: none;
 }
 
+.tweet-hover-box-container{
+  position: relative;
+}
+
+.tweet-hover-box-container:hover .tweet-icon-hover-box{
+  position: absolute;
+  top: 13px;
+  left: 27px;
+
+  width: 50px;
+  height: 50px;
+
+  cursor: pointer;
+
+  border-radius: 50%;
+  background-color: rgb(0, 0, 0, 0.1);
+  transition: width 0.2s, height 0.2s, background-color 0.2s;
+}
+
+.profile-pic-icon{
+  width: 40px;
+
+  border-radius: 50%;
+}
+
+.navbar-profile-pic-box{
+  width: 60px;
+  height: 60px;
+
+  margin: 0 5px 10px 0;
+}
+
+.navbar-tooltip-container{
+  position: relative;
+}
+
+.navbar-tooltip,
+.navbar-tooltip-account{
+  font-size: 0.65em;
+
+  background-color: rgb(0, 0, 0, 0.6);
+  color: white;
+
+  padding: 3px 4px;
+  border-radius: 2px;
+
+  position: absolute;
+  z-index: 1;
+
+  opacity: 0;
+  transition: opacity 0.1s ease-in 0.5s, visibility 0s 0.1s;
+
+  pointer-events: none;
+}
+
+.navbar-tooltip{
+  bottom: -23px;
+}
+
+.navbar-tooltip-post{
+  right: 44px;
+  bottom: -6px;
+}
+
+.navbar-tooltip-account{
+  top: -23px;
+}
+
+.navbar-tooltip-container:hover .navbar-tooltip,
+.navbar-tooltip-container:hover .navbar-tooltip-account{
+  opacity: 1;
+  visibility: visible;
+}
+
+.navbar-tooltip-container:not(:hover) .navbar-tooltip,
+.navbar-tooltip-container:not(:hover) .navbar-tooltip-account{
+  opacity: 0;
+  visibility: hidden;
+}
