--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,6 +3,7 @@
   top: 0;
 
   overflow-y: auto;
+  overflow-x: hidden;
 
   height: 100vh;
 
@@ -10,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   
-  padding: 5px 21px 15px 120px;
+  padding: 5px 21px 5px 120px;
   
   width: 40px;
 }
