--- a/styles/main.css
+++ b/styles/main.css
@@ -12,10 +12,17 @@
   align-items: center;
   justify-content: space-between;
 
-  padding: 0 2px 0 0;
   border-bottom: 1px solid hsl(0, 0%, 95%);
+  backdrop-filter: blur(15px);
 
-  position: relative;
+  background-color: rgb(255, 255, 255, 0.9);
+
+  position: fixed;
+  top: 0;
+  left: 182px;
+  right: 483px;
+  height: 53px;
+  z-index: 1;
 }
 
 .home-options{
@@ -30,7 +37,7 @@
 
 .foryou-tab-container,
 .following-tab-container{
-  padding: 17px 110px ;
+  padding: 18px 110px ;
 
   cursor: pointer;
 }
@@ -79,7 +86,7 @@
   display: flex;
   align-items: start;
 
-  padding: 6px 20px 10px 16px;
+  padding: 60px 20px 10px 16px;
   border-bottom: 1px solid hsl(0, 0%, 95%);
 }
 
