--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,7 +5,14 @@
 }
 
 .input-container{
-  position: relative;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  padding-top: 5px;
+
+  background-color: white;
+
+  height: 53px;
 }
 
 .fa-magnifying-glass-sidebar{
@@ -13,9 +20,9 @@
 
   position: absolute;
   left: 22px;
-  top: 15px;
+  top: 18px;
 
-  font-size: 0.95em;
+  font-size: 1em;
 }
 
 input{
@@ -33,7 +40,6 @@ input{
 .premium-subscription,
 .trends,
 .who-to-follow{
-  margin-top: 17px;
   border-radius: 20px;
   padding: 12px 20px 12px;
 
@@ -41,6 +47,15 @@ input{
   opacity: 0.9;
 
   width: 310px;
+}
+
+.premium-subscription{
+  margin-top: 60px;
+}
+
+.trends,
+.who-to-follow{
+  margin-top: 17px;
 }
 
 .premium-header,
