--- a/styles/general.css
+++ b/styles/general.css
@@ -4,11 +4,6 @@ body{
   margin: 0;
 }
 
-.container{
-  display: grid;
-  grid-template-columns: 0.75fr 2.5fr 2fr;
-}
-
 p{
   margin: 0;
 }
@@ -20,3 +15,68 @@ img{
 *{
   box-sizing: border-box;
 }
+.container{
+  display: flex;
+  align-items: stretch;
+}
+
+@media(min-width: 1000px) and (max-width: 1243px) {
+  .container{
+    padding: 0 12px;
+    margin: 0 125px;
+  }
+}
+
+
+.content{
+  display: flex;
+  flex-direction: column;
+}
+
+@media(min-width: 1000px) and (max-width: 1243px) {
+  .content{
+    align-items: center;
+  }
+}
+
+.main-sidebar{
+  display: grid;
+  grid-template-columns: 1.25fr 1fr;
+  padding-top: 50px;
+}
+
+@media(min-width: 1000px) and (max-width: 1243px) {
+  .main-sidebar{
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
+
+@media(max-width: 999.9px) {
+  .main-sidebar{
+   display: grid;
+   grid-template-columns: 1fr;
+  }
+ }
+
+@media(min-width: 800px) and (max-width: 999.9px) {
+  .main-sidebar{
+   display: grid;
+   grid-template-columns: 1fr;
+   padding: 0 20%;
+
+   margin-top: 1px;
+  }
+ }
+
+ @media(min-width: 600px) and (max-width: 799.9px) {
+  .main-sidebar{
+   padding: 0 5%;
+  }
+ }
+
+ @media(max-width: 599.9px) {
+  .main-sidebar{
+   padding: 0;
+  }
+ }
